Courier could upload only one avatar
